
- Call out predicate attributes of ZCML directive within "Views"
  chapter.

- Fix route_url documentation (``_query`` argument documented as
  ``query`` and ``_anchor`` argument documented as ``anchor``).

Backwards Incompatibilities
---------------------------

- The ``authtkt`` authentication policy ``remember`` method now no
  longer honors ``token`` or ``userdata`` keyword arguments.

Internal
--------

- Change how ``bfg_view`` decorator works when used as a class method
  decorator.  In 1.1a7, the``scan``directive actually tried to grope
  every class in scanned package at startup time, calling ``dir``
  against each found class, and subsequently invoking ``getattr``
  against each thing found by ``dir`` to see if it was a method.  This
  led to some strange symptoms (e.g. ``AttributeError: object has no
  attribute __provides__``), and was generally just a bad idea.  Now,
  instead of groping classes for methods at startup time, we just
  cause the ``bfg_view`` decorator itself to populate the method's
  class' ``__dict__`` when it is used as a method decorator.  This
  also requires a nasty _getframe thing but it's slightly less nasty
  than the startup time groping behavior.  This is essentially a
  reversion back to 1.1a6 "grokking" behavior plus some special magic
  for using the ``bfg_view`` decorator as method decorator inside the
  ``bfg_view`` class itself.

- The router now checks for a ``global_response_headers`` attribute of
  the request object before returning a response.  If this value
  exists, it is presumed to be a sequence of two-tuples, representing
  a set of headers to append to the 'normal' response headers.  This
  feature is internal, rather than exposed externally, because it's
  unclear whether it will stay around in the long term.  It was added
  to support the ``reissue_time`` feature of the authtkt
  authentication policy.

1.1a7 (2009-10-18)
==================

Features
--------
